--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="dailies-app">
             <h2>Dailies &nbsp;
-                <img src="images/sun1.png" width =30 margin-left="30px" >
+                <img src="images/sun1.png" width =30px>
             </h2>
         <div class="row">
             <input type="text" id="input-box" placeholder="Add Daily">
