--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="dailies-app">
-            <h2>Dailies &nbsp;
+            <h2>Dailies
                 <img src="images/sun1.png" class="sun11">
             </h2>
         <div class="row">
