--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="dailies-app">
             <h2>Dailies
-                <img src="images/sun1.png" class="sun11">
+                <img src="Images/sun1.png" class="sun11">
             </h2>
         <div class="row">
             <input type="text" id="input-box" placeholder="Add Daily">
